added user registration with hashed password, added user login, WIP jwt generation
